# friendly_names

./: .aider.llm.history  README.md  pyproject.toml
.github/workflows/: ci.yml
src/friendly_names/: __about__.py  __init__.py  adjectives.py  nouns.py  verbs.py
tests/: test_generator.py
