[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "friendly_names"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "James Kassemi", email = "james@kassemi.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/jkassemi/friendly_names#readme"
Issues = "https://github.com/jkassemi/friendly_names/issues"
Source = "https://github.com/jkassemi/friendly_names"

[tool.hatch.version]
path = "src/friendly_names/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/friendly_names tests}"

[tool.coverage.run]
source_pkgs = ["friendly_names", "tests"]
branch = true
parallel = true
omit = [
  "src/friendly_names/__about__.py",
]

[tool.coverage.paths]
friendly_names = ["src/friendly_names", "*/friendly_names/src/friendly_names"]
tests = ["tests", "*/friendly_names/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
